--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "zendframework/zend-mvc": "^3.0.1",
         "zfcampus/zf-development-mode": "^3.0",
         "zendframework/zend-db": "^2.9",
-        "ext-json": "*"1
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
